# BM-Network-Messenger

./: Application.cpp  Application.h  BM-Network-Messenger.pro  BM_Network_Messenger.pro  CMakeLists.txt  README.md  Utils.h  applicationlayercontroller.cpp  applicationlayercontroller.h  chat.cpp  chat.h  chat.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
application_layer/: chat.cpp  chat.h  chat.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
data_link_layer/include/: ApplicationControllerDL.h  BM_Network.h  BitIO.h  Controller.h  DataLinkController.h  Frame.h  FrameTransformer.h  Hamming3ErrorController.h  HammingDecoder.hpp  HammingEncoder.hpp  HammingErrorController3.h  IDatalink.h  PhysicalControllerDL.h
data_link_layer/src/: BitIO.cpp  Controller.cpp  DataLinkController.cpp  Frame.cpp  FrameTransformer.cpp  Hamming3ErrorController.cpp  HammingErrorController3.cpp
include/: IApplicationLayerController.h  IConnector.h  IDataLinkControllerApplication.h  IDataLinkControllerPhysical.h  IDataReceiver.h  IMessageReceiver.h  IPhysicalLayerController.h  utils.h
physical_layer/: DatalinkControllerPL.h  IPhysical.h  PhysicalController.cpp  PhysicalController.h  PhysicalLayer.cpp  PhysicalLayer.h  PhysicalLayerController.cpp  PhysicalLayerController.h  rs232.h
